corpus/baselines/conformance/jsdoc/jsdocTemplateConstructorFunction.errors.txt
templateTagOnConstructorFunctions.js(11,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
templateTagOnConstructorFunctions.js(12,5): error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
templateTagOnConstructorFunctions.js(15,12): error TS2304: Cannot find name 'T'.
templateTagOnConstructorFunctions.js(16,15): error TS2304: Cannot find name 'T'.
templateTagOnConstructorFunctions.js(22,9): error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.


==== templateTagOnConstructorFunctions.js (5 errors) ====
    /**
     * @template U
     * @typedef {(u: U) => U} Id
     */
    /**
     * @param {T} t
     * @template T
     */
    function Zet(t) {
        /** @type {T} */
        this.u
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
        this.t = t
        ~~~~
!!! error TS2683: 'this' implicitly has type 'any' because it does not have a type annotation.
    }
    /**
     * @param {T} v
               ~
!!! error TS2304: Cannot find name 'T'.
     * @param {Id<T>} id
                  ~
!!! error TS2304: Cannot find name 'T'.
     */
    Zet.prototype.add = function(v, id) {
        this.u = v || this.t
        return id(this.u)
    }
    var z = new Zet(1)
            ~~~~~~~~~~
!!! error TS7009: 'new' expression, whose target lacks a construct signature, implicitly has an 'any' type.
    z.t = 2
    z.u = false
    